@@ -1,4 +1,5 @@
 Next:
+0004138: Add tests for LBM overflow wrap bug
 0004064: Add simple unit tests to be run on request by surface
 0004063: set LBM buffer size message doesn't return a proper status
 0004045: Read FREV when iceboot self reset fails
